--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,14 +121,17 @@
   <data name="adduser" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\adduser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Windows-loading-cargando-ezgif.com-speed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Windows-loading-cargando-ezgif.com-speed.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="username_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\username_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="show_password_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\show_password_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="username_dark_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\username_dark_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="show_password_dark_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\show_password_dark_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,10 +139,10 @@
   <data name="DefaultAccountTile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DefaultAccountTile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="username_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\username_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Windows-loading-cargando-ezgif.com-speed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Windows-loading-cargando-ezgif.com-speed.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="wingetgui" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\wingetgui.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
