--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,8 +121,8 @@
   <data name="adduser" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\adduser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Toggle On" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\Toggle On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="wingetgui" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\wingetgui.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Windows-loading-cargando-ezgif.com-speed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Windows-loading-cargando-ezgif.com-speed.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,11 +139,14 @@
   <data name="username_dark_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\username_dark_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8-стрелка-влево-в-круге-2-100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\icons8-стрелка-влево-в-круге-2-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="username_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\username_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="wingetgui" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\wingetgui.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Toggle On" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\Toggle On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Back Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\Back Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,7 +160,7 @@
   <data name="show_password_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\show_password_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-стрелка-влево-в-круге-2-100" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\icons8-стрелка-влево-в-круге-2-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Binary Code" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\Binary Code.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
